# pfReporting

./: .gitignore  README.md  azure-pipelines.yml  buildExe.ps1  cli.py  config.py  create-empty-structure.ps1  generateExe.py  main.py  outage_report_standalone.html  pyproject.toml  requirements.txt  run_in_powerfactory.py
analysis/: kpi_calculator.py  ranking.py  violation_detector.py
database/: db_manager.py  db_queries.py  db_writer.py  schema.sql
freischaltung/: __init__.py  _mock_data.py  analysis.py  config.py  db_reader.py  db_writer.py  exceptions.py  logger.py  models.py  reader.py  utils.py
freischaltung/report/: __init__.py  builder.py  generator.py
freischaltung/report/assets/: scripts.js  style.css
freischaltung/report/templates/: report.html.j2
freischaltung/report/templates/partials/: _macros.html.j2  ampel.html.j2  footer.html.j2  header.html.j2  loadflow.html.j2  n1.html.j2  qds_info.html.j2  statistics.html.j2  summary.html.j2  switched.html.j2  thermal.html.j2  timeseries.html.j2  voltage.html.j2
output/: Freischaltungsbewertung_DEMO_20260417_002515.html
pfreporting/: __init__.py  __version__.py  _mock_data.py  analysis.py  config.py  db_reader.py  db_writer.py  elmres.py  exceptions.py  logger.py  models.py  pf_attrs.py  pipeline.py  reader.py  utils.py
pfreporting/report/: __init__.py  builder.py  generator.py  renderers.py  transformer.py
pfreporting/report/assets/: scripts.js  style.css
pfreporting/report/templates/: executive_summary_standalone.html.j2  loadflow_comparison.html.j2  qds_detail.html.j2  report.html.j2
pfreporting/report/templates/pages/: _base.html.j2  _nav.html.j2  details.html.j2  index.html.j2  quasi_dynamic.html.j2  statistics.html.j2  tables.html.j2
pfreporting/report/templates/partials/: _macros.html.j2  ampel.html.j2  calc_params.html.j2  executive_summary.html.j2  footer.html.j2  header.html.j2  kpi_hero.html.j2  loadflow.html.j2  n1.html.j2  overview_board.html.j2  qds_info.html.j2  radar.html.j2  statistics.html.j2  summary.html.j2  switched.html.j2  thermal.html.j2  timeseries.html.j2  voltage.html.j2
powerfactory/: pf_connector.py  pf_contingency_runner.py  pf_extractor.py
reporting/: chart_builder.py  data_assembler.py  html_renderer.py  pdf_exporter.py
scripts/: download_assets.py  download_release.py
templates/: outage_report.html  pfreporting.config.example.json
tests/: conftest.py  mock_pf_data.py  test_analysis.py  test_config.py  test_db_reader.py  test_db_writer.py  test_generator.py  test_models.py  test_pipeline.py
xml_templates/: details.pg  grid_summary.pg  overview.pg  plot_page.pg  quasi_dynamic.pg  statistics.pg  tabels.pg  table_Page.pg  tables.pg
