# =============================================================================
# Run setup:
#   uv sync                      # install all deps
#   uv run python scripts/download_assets.py   # fetch Chart.js vendor files
#   uv run pfreporting generate --mock --output-dir ./output
# =============================================================================

[project]
name            = "pfreporting"
version         = "0.1.0"
description     = "Automated De-Energization Assessment with PowerFactory – HTML Report Generator."
requires-python = ">=3.11"
readme          = "README.md"

dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]
pdf = [
    "weasyprint>=61",
]

[project.scripts]
pfreporting = "cli:app"

# ── uv ────────────────────────────────────────────────────────────────────────
[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ── build ─────────────────────────────────────────────────────────────────────
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pfreporting"]

[tool.hatch.build.targets.wheel.sources]
"cli.py" = "cli.py"
